// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview|Query.events connection fetches only events associated to a project with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "projects": Array [],
          "themes": Array [],
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "projects": Array [],
          "themes": Array [],
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 10",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 9",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 8",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "projects": Array [],
          "themes": Array [],
          "title": "evenementFutureSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "projects": Array [],
          "themes": Array [],
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "projects": Array [],
          "themes": Array [],
          "title": "ParisWeb2014",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjg=",
      "hasNextPage": false,
    },
    "totalCount": 9,
  },
}
`;

exports[`Preview|Query.events connection fetches only events associated to a theme with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "projects": Array [],
          "themes": Array [],
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "projects": Array [],
          "themes": Array [],
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 10",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 9",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 8",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "projects": Array [],
          "themes": Array [],
          "title": "evenementFutureSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "projects": Array [],
          "themes": Array [],
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "projects": Array [],
          "themes": Array [],
          "title": "ParisWeb2014",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjg=",
      "hasNextPage": false,
    },
    "totalCount": 9,
  },
}
`;

exports[`Preview|Query.events connection fetches only events matching a specific term with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "projects": Array [],
          "themes": Array [],
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "projects": Array [],
          "themes": Array [],
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 10",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 9",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 8",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "projects": Array [],
          "themes": Array [],
          "title": "evenementFutureSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "projects": Array [],
          "themes": Array [],
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "projects": Array [],
          "themes": Array [],
          "title": "ParisWeb2014",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjg=",
      "hasNextPage": false,
    },
    "totalCount": 9,
  },
}
`;

exports[`Preview|Query.events connection fetches only future events with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "projects": Array [],
          "themes": Array [],
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "projects": Array [],
          "themes": Array [],
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 10",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 9",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 8",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "projects": Array [],
          "themes": Array [],
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "projects": Array [],
          "themes": Array [],
          "title": "evenementFutureSansDateDeFin",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjY=",
      "hasNextPage": false,
    },
    "totalCount": 7,
  },
}
`;

exports[`Preview|Query.events connection fetches only passed events with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "projects": Array [],
          "themes": Array [],
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "projects": Array [],
          "themes": Array [],
          "title": "ParisWeb2014",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
    "totalCount": 2,
  },
}
`;

exports[`Preview|Query.events connection fetches the 3 events ordered by first end date with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "endAt": "2014-02-12 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ1",
          "startAt": "2014-02-11 00:00:00",
          "title": "ParisWeb2014",
        },
      },
      Object {
        "node": Object {
          "endAt": "2029-05-05 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ3",
          "startAt": "2029-01-01 00:00:00",
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "endAt": "2029-09-09 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ4",
          "startAt": "2029-03-03 00:00:00",
          "title": "Event 8",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": true,
    },
    "totalCount": 9,
  },
}
`;

exports[`Preview|Query.events connection fetches the 3 events ordered by first start date with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "endAt": "2014-02-12 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ1",
          "startAt": "2014-02-11 00:00:00",
          "title": "ParisWeb2014",
        },
      },
      Object {
        "node": Object {
          "endAt": null,
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "startAt": "2019-08-07 00:00:00",
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "endAt": null,
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "startAt": "2024-11-14 00:00:00",
          "title": "evenementFutureSansDateDeFin",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": true,
    },
    "totalCount": 9,
  },
}
`;

exports[`Preview|Query.events connection fetches the 3 events ordered by last end date with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "endAt": "2045-03-10 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ0",
          "startAt": "2032-01-01 00:00:00",
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "endAt": "2040-02-02 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ2",
          "startAt": "2032-02-01 00:00:00",
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "endAt": "2030-11-13 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "startAt": "2030-11-11 00:00:00",
          "title": "Event 10",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": true,
    },
    "totalCount": 9,
  },
}
`;

exports[`Preview|Query.events connection fetches the 3 events ordered by last start date with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "endAt": "2040-02-02 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ2",
          "startAt": "2032-02-01 00:00:00",
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "endAt": "2045-03-10 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ0",
          "startAt": "2032-01-01 00:00:00",
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "endAt": "2030-11-13 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "startAt": "2030-11-11 00:00:00",
          "title": "Event 10",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": true,
    },
    "totalCount": 9,
  },
}
`;

exports[`Preview|Query.events connection fetches the first hundred events with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Le Hellfest, également appelé Hellfest Summer Open Air, est un festival de musique français spécialisé dans les musiques extrêmes, annuellement organisé au mois de juin à Clisson en Loire-Atlantique. Sa forte fréquentation le fait figurer parmi les plus importants festivals de musique français.",
          "createdAt": "2015-01-06 00:00:00",
          "enabled": true,
          "endAt": "2040-02-02 00:00:00",
          "fullAddress": "103 Grande Rue de la Croix-Rousse, 69004 Lyon",
          "id": "RXZlbnQ6ZXZlbnQ2",
          "lat": 45.781327,
          "link": "https://www.hellfest.fr/",
          "lng": 4.830676,
          "startAt": "2032-02-01 00:00:00",
          "title": "Event without registrations",
          "updatedAt": null,
          "url": "https://capco.test/events/event-without-registrations",
          "zipCode": "69004",
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Rendez-vous les 29 et 30 mars pour l'évènement SymfonyLive Paris 2018, évènement Symfony 100% francophone.",
          "createdAt": "2015-01-04 00:00:00",
          "enabled": true,
          "endAt": "2045-03-10 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQ0",
          "lat": 45.747947,
          "link": "http://www.symfonyLive2015.fr",
          "lng": 4.838041,
          "startAt": "2032-01-01 00:00:00",
          "title": "SymfonyLive Paris",
          "updatedAt": null,
          "url": "https://capco.test/events/symfonylive-paris",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyNQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Only numbers 10 in my team",
          "createdAt": "2015-01-10 00:00:00",
          "enabled": true,
          "endAt": "2030-11-13 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2030-11-11 00:00:00",
          "title": "Event 10",
          "updatedAt": null,
          "url": "https://capco.test/events/event-10",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "So much gange",
          "createdAt": "2015-01-09 00:00:00",
          "enabled": true,
          "endAt": "2030-11-08 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQ5",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2030-11-03 00:00:00",
          "title": "Event 9",
          "updatedAt": null,
          "url": "https://capco.test/events/event-9",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMw==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "So much fun",
          "createdAt": "2015-01-08 00:00:00",
          "enabled": true,
          "endAt": "2029-09-09 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQ4",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2029-03-03 00:00:00",
          "title": "Event 8",
          "updatedAt": null,
          "url": "https://capco.test/events/event-8",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMg==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "So boring",
          "createdAt": "2015-01-07 00:00:00",
          "enabled": true,
          "endAt": "2029-05-05 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQ3",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2029-01-01 00:00:00",
          "title": "Event 7",
          "updatedAt": null,
          "url": "https://capco.test/events/event-7",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "I am in the future, but none knows when I will end…",
          "createdAt": "2015-01-14 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "1 rue chevrière, 07400 Meysse",
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "lat": null,
          "link": "http://www.lavie.fr",
          "lng": null,
          "startAt": "2024-11-14 00:00:00",
          "title": "evenementFutureSansDateDeFin",
          "updatedAt": null,
          "url": "https://capco.test/events/evenementfuturesansdatedefin",
          "zipCode": "07400",
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMg==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Oh yeah",
          "createdAt": "2015-01-12 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "lat": null,
          "link": "http://www.lavie.fr",
          "lng": null,
          "startAt": "2019-08-07 00:00:00",
          "title": "EvenementPresentSansDateDeFin",
          "updatedAt": null,
          "url": "https://capco.test/events/evenementpresentsansdatedefin",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyNQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Paris Web, la conférence francophone des gens qui font un web accessible et de qualité.",
          "createdAt": "2015-01-05 00:00:00",
          "enabled": true,
          "endAt": "2014-02-12 00:00:00",
          "fullAddress": "101 rue d'Angers, 69007 Lyon",
          "id": "RXZlbnQ6ZXZlbnQ1",
          "lat": 45.748041,
          "link": "http://www.parisweb2014.fr",
          "lng": 4.840284,
          "startAt": "2014-02-11 00:00:00",
          "title": "ParisWeb2014",
          "updatedAt": null,
          "url": "https://capco.test/events/parisweb2014",
          "zipCode": "69007",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjg=",
      "hasNextPage": false,
    },
    "totalCount": 9,
  },
}
`;
